--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -3,6 +3,6 @@
     width: 20em;
     height: 25em;
     border-radius: 24px;
-    margin: 0 auto;
+    margin: 1em auto;
     box-shadow: 1px 1px 3px 1px #00000028;
 }
