--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -10,16 +10,24 @@
 .menuCnt_Logo {
     background-color: beige;
 
-    width: 20%;
+    width: 10%;
     height: 5em;
 }
 
+.logo {
+    background-color: whitesmoke;
+    
+    margin: 0;
+
+    width: 100%;
+    height: 4em;
+}
 
 .menuCnt_Search {
     background-color: rgba(165, 42, 42, 0.27);
 
-    width: 60%;
-    margin: 0 auto;
+    width: 80%;
+    /* margin: 0 auto; */
     padding: 1em 0;
     
 }
