--- a/client/src/components/Searchbar/Searchbar.module.css
+++ b/client/src/components/Searchbar/Searchbar.module.css
@@ -8,8 +8,7 @@
 }
 
 .formContainer_input {
-  /* background-color: aqua; */
-  background-color: aliceblue;
+  background-color: #F4F4F4;
   width: 100%;
   height: 3em;
   border-radius: 16px;
