--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,3 +1,18 @@
-.homeContainer {
+.home__container {
+    background-color: #E7F3FF;
     
+    width: 100%;
+    height: 100vh;
+    
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.home__container_searchCity {
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
 }
